--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -40,6 +40,7 @@
 
     <script src="js/site.js" asp-append-version="true"></script>
     <script type="text/javascript">
+        window.location = "./login.html";
         getItems();
     </script>
 </body>
