--- a/wwwroot/html/login.html
+++ b/wwwroot/html/login.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-    <h1 style="background-color: yellow;">!!!!!!!!!!!!!!!!!!!!!!auto save!!!!!!!!!!!!!!!!!!!!!!</h1>
     <h1>login</h1>
     <form action="javascript:void(0);" onsubmit="login()" method="post">
         <label for="name">name</label>
@@ -17,6 +16,22 @@
         <input type="password" name="password" id="password">
         <input type="submit" value="send">
     </form>
+    <br>
+
+    <!-- postman -->
+    <div class="postman-run-button" data-postman-action="collection/fork" data-postman-visibility="public" data-postman-var-1="33981802-d6fb8f9d-8ce8-4a7e-9b26-2b3f6bc7536a" data-postman-collection-url="entityId=33981802-d6fb8f9d-8ce8-4a7e-9b26-2b3f6bc7536a&entityType=collection&workspaceId=180f2c30-0d97-42f5-ada6-387449efdbd3"></div>
+    <script type="text/javascript">
+        (function(p, o, s, t, m, a, n) {
+            !p[s] && (p[s] = function() {
+                (p[t] || (p[t] = [])).push(arguments);
+            });
+            !o.getElementById(s + t) && o.getElementsByTagName("head")[0].appendChild((
+                (n = o.createElement("script")),
+                (n.id = s + t), (n.async = 1), (n.src = m), n
+            ));
+        }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
+    </script>
+    <!-- postman -->
 
 </body>
 <script>
