--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -37,22 +37,23 @@
         </tr>
         <tbody id="tasks"></tbody>
     </table>
+    <br>
+
+    <button onclick="getUser()">edit your details</button>
+    <br>
+
+    <div id="editUserForm">
+        <h3>Edit Details</h3>
+        <form action="javascript:void(0);" onsubmit="updateDetails()">
+            <input type="text" id="edit-user-name">
+            <input type="text" id="edit-user-password">
+            <input type="submit" value="Save">
+            <a onclick="closeUserDetails()" aria-label="Close">&#10006;</a>
+        </form>
+    </div>
 
     <a id="to_users" hidden href="./html/users.html">to users</a>
-    <!-- postman -->
-    <div class="postman-run-button" data-postman-action="collection/fork" data-postman-var-1=":collection_id" data-postman-collection-url=":collection_url"></div>
-    <script type="text/javascript">
-        (function(p, o, s, t, m, a, n) {
-            !p[s] && (p[s] = function() {
-                (p[t] || (p[t] = [])).push(arguments);
-            });
-            !o.getElementById(s + t) && o.getElementsByTagName("head")[0].appendChild((
-                (n = o.createElement("script")),
-                (n.id = s + t), (n.async = 1), (n.src = m), n
-            ));
-        }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
-    </script>
-    <!-- postman -->
+
     <script src="js/site.js" asp-append-version="true"></script>
     <script type="text/javascript">
         const token = localStorage.getItem('tasksToken')
@@ -60,7 +61,7 @@
         if (!token)
             window.location.href = "./html/login.html"
         getItems();
-        getIfAdmin()
+        getIfAdmin();
     </script>
 </body>
 
