--- a/wwwroot/html/login.html
+++ b/wwwroot/html/login.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/site.css" />
+    <title>Tasks</title>
 </head>
 
 <body>
     <h1>login</h1>
-    <form action="javascript:void(0);" onsubmit="login()" method="post">
+    <form action="javascript:void(0);" onsubmit="sendToLogin()" method="post">
         <label for="name">name</label>
         <input type="text" name="name" id="name"><br><br>
         <label for="password">password</label>
@@ -17,57 +18,19 @@
         <input type="submit" value="send">
     </form>
     <br>
-
+    <!-- connect with google -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <meta id="g_id_onload" data-client_id="334778295018-0c9plhvu5f3fgitde8q73nf1f2pqlb8t.apps.googleusercontent.com"
+        data-callback="handleCredentialResponse">
+    </meta>
+    <div class="g_id_signin" data-type="standard"></div>
+    <br>
     <!-- postman -->
-    <div class="postman-run-button" data-postman-action="collection/fork" data-postman-visibility="public" data-postman-var-1="33981802-d6fb8f9d-8ce8-4a7e-9b26-2b3f6bc7536a" data-postman-collection-url="entityId=33981802-d6fb8f9d-8ce8-4a7e-9b26-2b3f6bc7536a&entityType=collection&workspaceId=180f2c30-0d97-42f5-ada6-387449efdbd3"></div>
-    <script type="text/javascript">
-        (function(p, o, s, t, m, a, n) {
-            !p[s] && (p[s] = function() {
-                (p[t] || (p[t] = [])).push(arguments);
-            });
-            !o.getElementById(s + t) && o.getElementsByTagName("head")[0].appendChild((
-                (n = o.createElement("script")),
-                (n.id = s + t), (n.async = 1), (n.src = m), n
-            ));
-        }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
-    </script>
-    <!-- postman -->
-
+    <div class="postman-run-button" data-postman-action="collection/fork" data-postman-visibility="public"
+        data-postman-var-1="33981802-d6fb8f9d-8ce8-4a7e-9b26-2b3f6bc7536a"
+        data-postman-collection-url="entityId=33981802-d6fb8f9d-8ce8-4a7e-9b26-2b3f6bc7536a&entityType=collection&workspaceId=180f2c30-0d97-42f5-ada6-387449efdbd3">
+    </div>
 </body>
-<script>
-    const name = document.getElementById('name');
-    const password = document.getElementById('password');
-    const uri = '/login'
-    const login = () => {
-        const item = {
-            Id: parseInt(3),
-            Name: name.value,
-            password: password.value
-        }
-        fetch(uri, {
-                method: 'POST',
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(item)
-            })
-            .then(res => {
-                if (res.status === 401)
-                    throw new Error();
-                else
-                    return res.json();
-            })
-            .then(data => {
-                localStorage.setItem("tasksToken", data)
-            })
-            .then(res => window.location.href = "../index.html")
-            .catch(error => alert("we don't know you, enter again"))
-            .finally(() => {
-                name.value = '';
-                password.value = ''
-            })
-    }
-</script>
+<script src="../js/login.js"></script>
 
 </html>
